# solfraction

./: README.md  asset-manifest.json  index.html  package-lock.json  package.json
Fractional_contract/: Cargo.toml  README.md
Fractional_contract/__MACOSX/: ._README.md
Fractional_contract/__MACOSX/src/: ._instruction.rs  ._processor.rs  ._state.rs
Fractional_contract/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
public/: index.html
src/: App.css  App.js  index.css  index.js
src/components/: AnalysisTab.js  AppCard.css  AppCard.js  AssAccounts.js  CollectionDetailsNftCard.css  CollectionDetailsNftCard.js  CollectionNft.css  CollectionNft.js  Init_fraction.js  MainNavbar.css  MainNavbar.js  NftCard.js  Reclaim_by_Admin.js  Reclaim_nft_by_owner.js  VaultsTab.css  VaultsTab.js  associatedAccounts.js  buy_tokens.js  creat_ata.js  externalwallet.js  fetch_listed_nft_by_user.js  fetch_rented_by_user.js  fetch_total_active_listings.js  fetch_total_rented_nft.js  fetchmetdatafrommint.js  getNft.js  getOrCreateAssociatedAccount.js  helper.js  ids.js  list_nft_for_rent.js  platform_state.js  rent_nft.js  return_nft.js  unissue.js  updatetime.js  utils.js  withdraw_nft.js
src/pages/: Buy.css  Buy.js  CollectionDetails.css  CollectionDetails.js  Collections.js  Explore.js  Fractionalize.js
src/store/: index.js  nftSlice.js
static/css/: main.0ef9d7f4.css  main.0ef9d7f4.css.map
static/js/: 787.cf445318.chunk.js  787.cf445318.chunk.js.map  main.46641b45.js  main.46641b45.js.LICENSE.txt  main.46641b45.js.map
